crates/topos/tests/snapshots/verifier__assert_delivery_help_display.snap
---
source: crates/topos/tests/verifier.rs
expression: result
---
Assert that a delivery was made to a list of peers

Usage: topos verifier tce assert-delivery [OPTIONS] [NODES]

Arguments:
  [NODES]  The node list to be used, can be a file path or a comma separated list of Uri. If not provided, stdin is listened [env: TARGET_NODES_PATH=]

Options:
  -f, --format <FORMAT>
          [default: json] [possible values: json, plain]
  -v, --verbose...
          
  -t, --timeout <TIMEOUT>
          Global timeout for the command [default: 10]
      --timeout-broadcast <TIMEOUT_BROADCAST>
          Seconds to wait before asserting the broadcast [default: 2]
  -h, --help
          Print help

