crates/topos/tests/snapshots/verifier__impl.snap
---
source: crates/topos/tests/verifier.rs
expression: result
---
Usage: topos verifier tce [OPTIONS] [COMMAND]

Commands:
  assert-delivery  Assert that a delivery was made to a list of nodes
  help             Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...  
  -h, --help        Print help

